tests/NormalTests/paczka1/fuzzy1/92823991.err
Error in line 2: C9Z0F0b S300 50,7
Error in line 11: n8rX2 A574 45,3
Error in line 15: n8rX2 S300 66,9
Error in line 7: C9Z0F0b S554 78,4
Error in line 14: qUGsHxndf A211 143,8
Error in line 31: C9Z0F0b A574 31,9
